[UPD] fix line breaks on button texts

--- a/src/styles/components/contest-tile.scss
+++ b/src/styles/components/contest-tile.scss
@@ -371,7 +371,7 @@ $contest-tile--solid__background: $color__n-90;
   // Contest buttons and live indicator
   // --------------------
 
-  .contest-tile__bottom {
+  .contest-tile__botton {
     // flex-direction: column;
     justify-content: space-between;
   }
